# ros2_experiment

./: .gitignore  README.md  TODO.md  compile_commands.json  default.json  walker_s2_motion.json
src/cpp_test/: CMakeLists.txt  package.xml
src/cpp_test/src/: talker.cpp
src/motion_player/: CMakeLists.txt  README.md  package.xml
src/motion_player/data/: default.json  walker_s2_motion.json
src/motion_player/include/motion_player/: motion_data.hpp  motion_loader.hpp  motion_player.hpp
src/motion_player/include/robot_controller/: motion_data.hpp  motion_engine.hpp
src/motion_player/src/: main.cpp  motion_engine.cpp  motion_loader.cpp  motion_player.cpp
src/motion_test/: CMakeLists.txt  README.md  TODO.md  package.xml
src/motion_test/include/motion_test/: lidar_processor.hpp  motion_commander.hpp  motion_filter.hpp  test.hpp
src/motion_test/msg/: MotionCommand.msg
src/motion_test/src/: lidar_processor.cpp  main.cpp  motion_commander.cpp  motion_commander_node.cpp  motion_filter.cpp  motion_filter_node.cpp  test.cpp
src/pubsub_demo/: CMakeLists.txt  package.xml
src/pubsub_demo/include/pubsub_demo/: listener_node.hpp  processing_node.hpp  talker.hpp
src/pubsub_demo/src/: listener_node.cpp  main.cpp  main_listener.cpp  main_processing.cpp  main_talker.cpp  processing_node.cpp  talker.cpp  talker_node.cpp
src/robot_controller/: CMakeLists.txt  README.md  package.xml
src/robot_controller/include/robot_controller/: robot_controller.hpp
src/robot_controller/src/: motion_player.cpp  robot_controller.cpp
src/sensor_playground/: CMakeLists.txt  package.xml
src/sensor_playground/src/: main.cpp
src/walker_s2_controller/: CMakeLists.txt  README.md  package.xml
src/walker_s2_controller/src/: walker_controller.cpp
